# Agrotech_ML

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  pypirc_example.txt  pyproject.toml  requirements.txt  setup.py
AgroGraphNet/: PREDICTION_README.md  README.md  SETUP_AND_RUN_GUIDE.md  __init__.py  __version__.py  requirements.txt  run_model.py  sample_dataset.csv  test_prediction.py  train_models.py  verify_setup.py
AgroGraphNet/cli/: main.py
AgroGraphNet/cli/commands/: init.py  predict.py  train.py
AgroGraphNet/core/: config.py  trainer.py
AgroGraphNet/data/processed/: disease_processed.csv  farms_processed.csv  features_scaled.csv  satellite_processed.csv
AgroGraphNet/models/: best_gat_model.pth  best_gcn_model.pth  best_graphsage_model.pth
AgroGraphNet/notebooks/: 02_data_preprocessing.ipynb  03_graph_construction.ipynb  04_feature_engineering.ipynb  05_model_development.ipynb  06_evaluation_visualization.ipynb  07_prediction_pipeline.ipynb
AgroGraphNet/notebooks/.ipynb_checkpoints/: 01_data_collection-checkpoint.ipynb  04_feature_engineering-checkpoint.ipynb  05_model_development-checkpoint.ipynb
AgroGraphNet/results/: 03_graph_network_map.html  model_results.pkl  model_summary.json  predictions_20251006_203109.csv
AgroGraphNet/src/: graph_utils.py
AgroGraphNet/templates/: data_schema.json
AgroGraphNet/utils/: logger.py
agrographnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build.py  release.py
test_fixed_cli/: config.yaml  create_larger_dataset.py  debug_training.py  new_farm_data.csv  simple_test.py
test_fixed_cli/data/raw/: farms.csv  labels.csv  satellite.csv  weather.csv
test_fixed_cli/models/: graphsage_best_model.pth  training_summary.txt
test_project/: .gitignore  README.md
test_project/data/: README.md
